[package]
name = "mini-kafka"
version = "0.1.0"
edition = "2021"
default-run = "mini-kafka"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
env_logger = "0.11.8"
log = "0.4.28"
regex = "1.11.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
